plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.6'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.kdt.yts'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

// ⭐️ commons-logging 라이브러리와의 충돌을 방지하기 위해 전역적으로 제외합니다.
configurations {
	all {
		exclude group: 'commons-logging', module: 'commons-logging'
	}
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Starters (핵심 웹/데이터베이스 기능)
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebClient 사용을 위해 필요
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-actuator' // Health Check

	// Database
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Security (JWT & OAuth2)
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// OpenAI
	implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'

	// AWS S3
	implementation platform('software.amazon.awssdk:bom:2.20.27')
	implementation 'software.amazon.awssdk:s3'

	// Google & YouTube API (⭐️ 중복 제거 및 정리)
	implementation 'com.google.apis:google-api-services-youtube:v3-rev222-1.25.0'
	implementation 'com.google.api-client:google-api-client:1.33.0'
	implementation 'com.google.http-client:google-http-client-jackson2:1.41.5'
	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'

	// Swagger (API 문서 자동화)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	// Lombok (코드 자동 생성)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'com.h2database:h2' // 테스트용 인메모리 DB
}

tasks.named('test') {
	useJUnitPlatform()
}